file: fix memory leak in nautilus_file_is_remote

https://bugzilla.gnome.org/show_bug.cgi?id=770306